# UICDEV

./: .env.example  .gitignore  LICENSE  README.md  gemini.md  main.py  pre-commit-config.yaml  pyproject.toml
apps/accounts/: admin.py  auth_class.py  drafts.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
apps/accounts/apis/: __init__.py  serializers.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_author_created_at_alter_author_updated_at_and_more.py
apps/accounts/serializers/: __init__.py  auth.py  author.py  education.py  user_certificate.py  user_education.py  user_experiance.py
apps/accounts/views/: __init__.py  auth.py  author_crud.py  education_crud.py  user_certificate.py  user_education.py  user_experiance.py
apps/common/: admin.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/common/apis/: __init__.py  serializers.py  views.py
apps/common/migrations/: 0001_initial.py  0002_remove_media_file_url_media_file_and_more.py  0004_alter_region_country.py
apps/common/serializers/: __init__.py  country.py  file_upload.py  region.py
apps/common/views/: __init__.py  country_crud.py  file_upload.py  (+2 more)
apps/courses/: admin.py  models.py  tests.py  translation.py  urls.py  views.py
apps/interactions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/notifications/: admin.py  models.py  tests.py  urls.py  views.py
config/: celery.py  jazzmin_conf.py  settings.py  urls.py
docs/: PLAN.md  countries.json  regions.json  uicdev.drawio
templates/: home.html
(+35 files in other folders)
